--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="if-edge">
+  <meta name="viewport" content="withdrawable-width, initial-scale-1.0">
+  <title>My Portfolio</title>
+</head>
+<body>
+  <h1>This is my Portfolio</h1>
+  <p>Description</p>
+</body>
+</html>
