--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="if-edge">
-  <meta name="viewport" content="withdrawable-width, initial-scale-1.0">
+  <meta name="viewport" content="withdrawable-width, initial-scale=1.0">
   <title>My Portfolio</title>
+  <link rel="stylesheet" href="style.css"
 </head>
 <body>
-  <h1>This is my Portfolio</h1>
-  <p>Description</p>
+  
 </body>
 </html>
