--- a/index.html
+++ b/index.html
@@ -21,5 +21,21 @@
 
     <a href="#" class="contact">Contact Me</a>
   </header>
+
+  <section class="home"></section>
+      <div class="home-content">
+            <h3>Hi</h3>
+
+            <h1>I'm <span>Bruce<br></span>an IT Student</h1>
+            <p>Lorem ipsum etc...</p>
+
+            <div-class="btn-box">
+                  <button class="btn-1">Hire Me</button>
+                  <button class="btn-2">Experience</button>
+            </div>  
+      </div>
+      <div class="img-box">
+            <img src="" alt="">
+      </div>
 </body>
 </html>
